# COVID-Factors-Analysis

./: .env  .gitignore  Makefile  README.md  gcloud-token.json  main.py  pyproject.toml  tempsql.sql
covid/: covid_cases.py
data/import/: actor.csv  actor_type.csv  ccc_actor.csv  characteristic.csv  characteristic_type.csv  county.csv  county.geojson  county_capitol_rioters.csv  county_csa.csv  county_demographics.csv  county_msa.csv  csa.csv  event_actor.csv  event_type.csv  interaction.csv  issue.csv  msa.csv  protest_type.csv  question.csv  region.csv  response.csv  state.csv  state.geojson  survey.csv  survey_response.csv
data/raw/: state_restrictions.csv
docs/: Data Catalog.md  Deployment.md
ingest_feeds/ccc_events/: main.py
ingest_feeds/census_demographics/: main.R
ingest_feeds/census_tiger/: main.py  requirements.txt
ingest_feeds/jhu_covid19/: README.md  main.py  (+1 more)
profiles/: acled_event.csv.html  actor.csv.html  actor_type.csv.html  ccc_actor.csv.html  ccc_event.csv.html  ccc_event_actor.csv.html  ccc_event_issue.csv.html  ccc_event_protest_type.csv.html  characteristic.csv.html  characteristic_type.csv.html  county.csv.html  county_capitol_rioters.csv.html  county_cases.csv.html  county_msa.csv.html  csa.csv.html  event_actor.csv.html  event_type.csv.html  interaction.csv.html  issue.csv.html  msa.csv.html  protest_type.csv.html  question.csv.html  region.csv.html  response.csv.html  state.csv.html  survey.csv.html  survey_response.csv.html
scripts/: DW_Tableau_v3.twb  profiling.py
sql/: demographics_DDL_DML.sql  ingest-ddl.sql  initdb.sql
(+54 files in other folders)
